--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
+  intl: ^0.20.2
 
 
 dev_dependencies:
@@ -54,6 +55,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/wheeling_forward.png
+    - assets/images/wheeling_on_spot.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
